--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -8,3 +8,10 @@ ruby:
      delivered fast, you should add Ruby to your toolbox.
    price:    49.50
    image_url:    ruby.png
+
+chocolate:
+   title:    Chocolate
+   description:
+     sweet
+   price:    49.50
+   image_url:    ruby.png
